fix cutoff popups

--- a/css/style.css
+++ b/css/style.css
@@ -17,3 +17,8 @@ html, body, #map {
 .arc path{
     stroke: #fff;
 }
+
+.chart_area{
+  width: 200px;
+  height: 200px;
+}
